@@ -337,7 +337,7 @@ class CScript extends CZBXAPI {
 
 		$scripts = $this->get(array(
 			'output' => API_OUTPUT_EXTEND,
-			'selectHosts' => API_OUTPUT_REFER,
+			'selectHosts' => array('hostid'),
 			'hostids' => $hostIds,
 			'sortfield' => 'name',
 			'preservekeys' => true
@@ -346,11 +346,11 @@ class CScript extends CZBXAPI {
 		if ($scripts) {
 			// resolve macros
 			$macrosData = array();
-			foreach ($scripts as $script) {
+			foreach ($scripts as $scriptId => $script) {
 				if (!empty($script['confirmation'])) {
 					foreach ($script['hosts'] as $host) {
 						if (isset($scriptsByHost[$host['hostid']])) {
-							$macrosData[$host['hostid']][] = $script['confirmation'];
+							$macrosData[$host['hostid']][$scriptId] = $script['confirmation'];
 						}
 					}
 				}
@@ -362,11 +362,9 @@ class CScript extends CZBXAPI {
 				));
 			}
 
-			$i = 0;
-			foreach ($scripts as $script) {
+			foreach ($scripts as $scriptId => $script) {
 				$hosts = $script['hosts'];
 				unset($script['hosts']);
-
 				// set script to host
 				foreach ($hosts as $host) {
 					$hostId = $host['hostid'];
@@ -376,14 +374,10 @@ class CScript extends CZBXAPI {
 						$scriptsByHost[$hostId][$size] = $script;
 
 						// set confirmation text with resolved macros
-						if (!empty($macrosData[$hostId]) && !empty($script['confirmation'])) {
-							$scriptsByHost[$hostId][$size]['confirmation'] = $macrosData[$hostId][$i];
+						if (isset($macrosData[$hostId][$scriptId]) && $script['confirmation']) {
+							$scriptsByHost[$hostId][$size]['confirmation'] = $macrosData[$hostId][$scriptId];
 						}
 					}
-				}
-
-				if (!empty($script['confirmation'])) {
-					$i++;
 				}
 			}
 		}
